test: use Java 21 list API